--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
   
-  <display-name>copySc</display-name>
+  <display-name>windK</display-name>
   
   <!-- context-params start -->
   <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>
-			 classpath*:/mybatis-context.xml 
-			<!--classpath*:/jpa-context.xml  -->
+			 classpath*:/repository/mybatis-context.xml 
+			<!--classpath*:/repository/jpa-context.xml  -->
 			classpath*:/root-context.xml
 		</param-value>
   </context-param>
@@ -93,9 +93,19 @@
     <servlet-name>springServlet</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
-  
   <!-- Servlets end -->
   
+  <!-- CXFServlet -->
+  <servlet>
+  	<servlet-name>CXFServlet</servlet-name>
+  	<servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>CXFServlet</servlet-name>
+  	<url-pattern>/cxf/*</url-pattern>
+  </servlet-mapping>
+  <!-- CXFServlet  end-->
+  <!-- Servlets end --> 
   <error-page>
     <exception-type>java.lang.Throwable</exception-type>
     <location>/WEB-INF/views/error/500.jsp</location>
