--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.springside</groupId>
-	<artifactId>springside-parent</artifactId>
-	<version>4.3.0-SNAPSHOT</version>
-	<name>Springside :: Module :: Parent</name>
+	<modelVersion>1.0.1</modelVersion>
+	<groupId>org.wind</groupId>
+	<artifactId>wind-parent</artifactId>
+	<version>1.0.1-SNAPSHOT</version>
+	<name>wind</name>
 	<packaging>pom</packaging>
 
 	<properties>
-		<!-- 主要依赖库的版本定义 -->
-		<springside.version>4.3.0-SNAPSHOT</springside.version>
+		<!-- dependencies definition -->
 		<spring.version>4.0.0.RELEASE</spring.version>
 		<hibernate.version>4.3.1.Final</hibernate.version>
 		<mybatis.version>3.2.4</mybatis.version>
@@ -20,7 +19,6 @@
 		<shiro.version>1.2.2</shiro.version>
 		<cxf.version>2.7.8</cxf.version>
 		<activemq.version>5.7.0</activemq.version>
-		<quartz.version>2.2.1</quartz.version>
 		<jedis.version>2.2.1</jedis.version>
 		<ehcache.version>2.6.6</ehcache.version>
 		<spymemcached.version>2.10.4</spymemcached.version>
@@ -48,7 +46,7 @@
 		<jetty.version>7.6.14.v20131031</jetty.version>
 		<h2.version>1.3.175</h2.version>
 
-		<!-- Plugin的属性 -->
+		<!-- Plugin -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.6</java.version>
 	</properties>
@@ -59,7 +57,7 @@
 	
 	
 
-	<!-- 设定除中央仓库 (repo1.maven.org/maven2/)外的其他仓库,按设定顺序进行查询，如有Nexus私服, 取消注释并指向正确的服务器地址 
+	<!-- centre repository (repo1.maven.org/maven2/), Nexus private server information
 	<repositories>
 		<repository>
 			<id>nexus</id>
@@ -68,7 +66,7 @@
 		</repository>
 	</repositories>-->
 
-	<!-- 如有Nexus私服, 取消注释并指向正确的服务器地址
+	<!--  private server information
 	<pluginRepositories>
 		<pluginRepository>
 			<id>nexus</id>
@@ -80,31 +78,11 @@
 		</pluginRepository>
 	</pluginRepositories> -->
 
-	<!-- 预定义依赖项的version,scope与exclusions,子项目中只需定义groupId 与  artifactId 即可 -->
+	<!-- dependency dversion,scope,exclusions, just need to set groupId and artifactId in sub-project -->
 	<dependencyManagement>
 		<dependencies>
-			<!-- SPRINGSIDE MODULES begin -->
-			<dependency>
-				<groupId>org.springside</groupId>
-				<artifactId>springside-core</artifactId>
-				<version>${springside.version}</version>
-				<scope>compile</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.springside</groupId>
-				<artifactId>springside-extension</artifactId>
-				<version>${springside.version}</version>
-				<scope>compile</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.springside</groupId>
-				<artifactId>springside-metrics</artifactId>
-				<version>${springside.version}</version>
-			</dependency>
-			<!-- SPRINGSIDE MODULES end -->
-			
 			<!-- spring-->
-			<!-- 纯粹为了exclude commons-loging -->
+			<!-- exclude commons-loging -->
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-core</artifactId>
@@ -333,13 +311,6 @@
 			</dependency>
 			<!-- JMS end -->
 
-			<!-- TIMER -->
-			<dependency>
-				<groupId>org.quartz-scheduler</groupId>
-				<artifactId>quartz</artifactId>
-				<version>${quartz.version}</version>
-			</dependency>
-
 			<!-- NOSQL begin -->
 			<dependency>
 				<groupId>redis.clients</groupId>
@@ -466,21 +437,21 @@
 				<version>${logback.version}</version>
 			</dependency>
 
-			<!-- 代码直接调用log4j会被桥接到slf4j -->
+			<!-- calling log4j will be bridged to slf4j -->
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>log4j-over-slf4j</artifactId>
 				<version>${slf4j.version}</version>
 			</dependency>
 
-			<!-- 代码直接调用commons-logging会被桥接到slf4j -->
+			<!-- calling commons-logging will be bridged to slf4j -->
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>jcl-over-slf4j</artifactId>
 				<version>${slf4j.version}</version>
 			</dependency>
 
-			<!-- 代码直接调用java.util.logging会被桥接到slf4j -->
+			<!-- calling java.util.logging will be bridged to slf4j -->
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>jul-to-slf4j</artifactId>
@@ -671,22 +642,6 @@
 				</exclusions>
 			</dependency>
 
-			<!-- springside -->
-			<dependency>
-				<groupId>org.springside</groupId>
-				<artifactId>springside-core</artifactId>
-				<version>${springside.version}</version>
-				<classifier>tests</classifier>
-				<scope>test</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.springside</groupId>
-				<artifactId>springside-extension</artifactId>
-				<version>${springside.version}</version>
-				<classifier>tests</classifier>
-				<scope>test</scope>
-			</dependency>
-
 			<!-- spring -->
 			<dependency>
 				<groupId>org.springframework</groupId>
@@ -787,28 +742,15 @@
 				<scope>test</scope>
 			</dependency>
 
-			<!-- 定义隐式依赖的版本 -->
-			<dependency>
-				<groupId>org.hamcrest</groupId>
-				<artifactId>hamcrest-core</artifactId>
-				<version>1.3</version>
-				<scope>test</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.objenesis</groupId>
-				<artifactId>objenesis</artifactId>
-				<version>2.1</version>
-				<scope>test</scope>
-			</dependency>
 			<!-- TEST end -->
 		</dependencies>
 	</dependencyManagement>
 
-	<!-- 插件配置 -->
+	<!-- plugin setting -->
 	<build>
 		<pluginManagement>
 			<plugins>
-				<!-- compiler插件, 设定JDK版本 -->
+				<!-- compiler JDK setting-->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
@@ -820,14 +762,14 @@
 					</configuration>
 				</plugin>
 
-				<!-- resource插件 -->
+				<!-- resource plugin -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-resources-plugin</artifactId>
 					<version>2.6</version>
 				</plugin>
 
-				<!-- test插件, 仅测试名称为*Test的类, 使用支持分组测试的surefire-junit47 driver -->
+				<!-- test plugin, surefire-junit47 driver -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
@@ -853,14 +795,14 @@
 					<version>1.8</version>
 				</plugin>
 
-				<!-- cobertura 测试覆盖率统计插插件 -->
+				<!-- cobertura plugin, omit unnecessary coverage  -->
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>cobertura-maven-plugin</artifactId>
 					<version>2.6</version>
 				</plugin>
 
-				<!-- war打包插件, 设定war包名称不带版本号 -->
+				<!-- war plugin -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-war-plugin</artifactId>
@@ -870,7 +812,7 @@
 					</configuration>
 				</plugin>
 
-				<!-- jar打包相关插件 -->
+				<!-- jar  plugin -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-jar-plugin</artifactId>
@@ -889,21 +831,21 @@
 					<version>2.2.1</version>
 				</plugin>
 
-				<!-- clean插件 -->
+				<!--maven clean plugin -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-clean-plugin</artifactId>
 					<version>2.5</version>
 				</plugin>
 
-				<!-- install插件 -->
+				<!--  maven install -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-install-plugin</artifactId>
 					<version>2.5.1</version>
 				</plugin>
 
-				<!-- enforcer插件, 避免被依赖的依赖引入过期的jar包 -->
+				<!-- maven enforcer-->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-enforcer-plugin</artifactId>
@@ -940,27 +882,27 @@
 					</executions>
 				</plugin>
 
-				<!-- jetty插件 -->
+				<!-- jetty plugin -->
 				<plugin>
 					<groupId>org.mortbay.jetty</groupId>
 					<artifactId>jetty-maven-plugin</artifactId>
 					<version>${jetty.version}</version>
 				</plugin>
-				<!-- tomcat插件  -->
+				<!-- tomcat  plugin  -->
 				<plugin>
 					<groupId>org.apache.tomcat.maven</groupId>
 					<artifactId>tomcat7-maven-plugin</artifactId>
 					<version>2.2</version>
 				</plugin>
 
-				<!-- assembly插件 -->
+				<!-- assembly plugin -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-assembly-plugin</artifactId>
 					<version>2.4</version>
 				</plugin>
 
-				<!-- dependency相关插件 -->
+				<!-- dependency  plugin -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-dependency-plugin</artifactId>
@@ -972,14 +914,14 @@
 					<version>2.1</version>
 				</plugin>
 
-				<!-- ant插件 -->
+				<!-- ant  plugin -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-antrun-plugin</artifactId>
 					<version>1.7</version>
 				</plugin>
 
-				<!-- exec java 插件 -->
+				<!-- exec java plugin-->
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>exec-maven-plugin</artifactId>
@@ -990,52 +932,5 @@
 	</build>
 
 	<profiles>
-		<!-- 执行@Category(Smoke.class)的TestCase -->
-		<profile>
-			<id>run-smoke</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<configuration>
-							<groups>org.springside.modules.test.category.Smoke</groups>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
-		<!-- 忽略@Category(UnStable.class)的TestCase -->
-		<profile>
-			<id>skip-unstable</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<configuration>
-							<excludedGroups>org.springside.modules.test.category.UnStable</excludedGroups>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
-		<!-- 执行@Category(UnStable.class)的TestCase -->
-		<profile>
-			<id>run-unstable</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<configuration>
-							<includedGroups>org.springside.modules.test.category.UnStable</includedGroups>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
 	</profiles>
 </project>
