--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+	<modelVersion>1.0.1</modelVersion>
 	<parent>
-		<groupId>org.springside</groupId>
-		<artifactId>springside-parent</artifactId>
-		<version>4.3.0-SNAPSHOT</version>
+		<groupId>org.wind</groupId>
+		<artifactId>wind-parent</artifactId>
+		<version>1.0.1-SNAPSHOT</version>
 		<relativePath>parent/</relativePath>
 	</parent>
 	<groupId>org.wind.k</groupId>
@@ -13,8 +13,7 @@
 	<packaging>war</packaging>
 	<name>windK</name>
 	
-
-	<!-- 项目属性 -->
+	<!-- project properties -->
 	<properties>
 		<!--  <jdbc.driver.groupId>com.h2database</jdbc.driver.groupId> 
 		<jdbc.driver.artifactId>h2</jdbc.driver.artifactId>
@@ -27,22 +26,8 @@
 	
 	
 
-	<!-- 依赖项定义 -->
+	<!-- dependencies -->
 	<dependencies>
-		<!-- SPRINGSIDE begin -->
-		<dependency>
-			<groupId>org.springside</groupId>
-			<artifactId>springside-core</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springside</groupId>
-			<artifactId>springside-extension</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springside</groupId>
-			<artifactId>springside-metrics</artifactId>
-		</dependency>
-		<!-- SPRINGSIDE end -->
 
 		<!-- SPRING basic begin -->
 		<!-- email/scheduler/freemarker -->
@@ -172,12 +157,6 @@
 		</dependency>
 		<!-- JMS end -->
 
-		<!-- TIMER -->
-		<dependency>
-			<groupId>org.quartz-scheduler</groupId>
-			<artifactId>quartz</artifactId>
-		</dependency>
-
 		<!-- Redis -->
 		<dependency>
 			<groupId>redis.clients</groupId>
@@ -193,7 +172,7 @@
 		<dependency>
 			<groupId>com.thimbleware.jmemcached</groupId>
 			<artifactId>jmemcached-core</artifactId>
-			<!-- 为演示而改为runtime -->
+			<!--  for showing ,runtime -->
 			<scope>runtime</scope>
 		</dependency>
 
@@ -369,22 +348,6 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.springside</groupId>
-			<artifactId>springside-core</artifactId>
-			<classifier>tests</classifier>
-			<!-- for xxxDemo class -->
-			<scope>compile</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springside</groupId>
-			<artifactId>springside-extension</artifactId>
-			<classifier>tests</classifier>
-			<!-- for xxxDemo class -->
-			<scope>compile</scope>
-		</dependency>
-
-		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<!-- for xxxDemo class -->
@@ -413,7 +376,7 @@
 			<scope>provided</scope>
 		</dependency>
 		
-		<!-- h2 如果生产数据库不是H2，解开下面的注释
+		<!-- h2 ,only for h2,if not please comment it
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
@@ -449,7 +412,7 @@
 
 	<build>
 		<plugins>
-			<!-- 增加functional test的Source目录 -->
+			<!-- add functional test in direct Source -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>build-helper-maven-plugin</artifactId>
@@ -469,7 +432,7 @@
 				</executions>
 			</plugin>
 
-			<!-- test插件, 设定內存 -->
+			<!-- test plugin, memery setting -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -478,7 +441,7 @@
 				</configuration>
 			</plugin>
 
-			<!-- cobertura插件, 取消不需要计算覆盖率的类 -->
+			<!-- cobertura plugin, omit unnecessary coverage  -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
@@ -494,7 +457,7 @@
 				</configuration>
 			</plugin>
 
-			<!-- jetty插件, 设定context path与spring profile -->
+			<!-- jetty plugin, context path and spring profile setting-->
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
@@ -512,7 +475,7 @@
 				</configuration>
 			</plugin>
 
-			<!-- tomcat7 插件 -->
+			<!-- tomcat7  -->
 			<plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
@@ -524,13 +487,13 @@
 				</configuration>
 			</plugin>
 
-			<!-- enforcer插件, 规则统一定义在parent -->
+			<!-- enforcer plugin,  the details in parent porm-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-enforcer-plugin</artifactId>
 			</plugin>
 
-			<!-- cxf wsdl2java 插件 -->
+			<!-- cxf wsdl2java plugin -->
 			<plugin>
 				<groupId>org.apache.cxf</groupId>
 				<artifactId>cxf-codegen-plugin</artifactId>
@@ -548,7 +511,7 @@
 	</build>
 
 	<profiles>
-		<!-- 执行functional test -->
+		<!-- functional test -->
 		<profile>
 			<id>functional-test</id>
 			<build>
@@ -561,9 +524,9 @@
 							<includes>
 								<include>**/*FT.java</include>
 							</includes>
-							<!-- 支持taglib tld文件查找的必要设置 -->
+							<!-- taglib tld setting for file searching -->
 							<useSystemClassLoader>false</useSystemClassLoader>
-							<!-- 将由mvn命令行-Dselenium.driver传到surefire的JVM中 -->
+							<!-- transfer from mvn command line -Dselenium.driver  to surefire JVM-->
 							<systemPropertyVariables>
 								<selenium.driver>${selenium.driver}</selenium.driver>
 							</systemPropertyVariables>
@@ -573,7 +536,7 @@
 			</build>
 		</profile>
 
-		<!-- 执行bdd test -->
+		<!--bdd test -->
 		<profile>
 			<id>bdd-test</id>
 			<build>
@@ -607,7 +570,7 @@
 			</build>
 		</profile>
 
-		<!-- 刷新开发环境数据库 -->
+		<!-- reflesh development datebase -->
 		<profile>
 			<id>refresh-db</id>
 			<build>
@@ -625,49 +588,13 @@
 									<transaction src="src/main/resources/sql/h2/schema.sql" />
 									<transaction src="src/test/resources/data/h2/import-data.sql" />
 								</sql>
-								<sql driver="${quartz.jdbc.driver}" url="${quartz.jdbc.url}" userid="${quartz.jdbc.username}" password="${quartz.jdbc.password}"
-									encoding="${project.build.sourceEncoding}" src="src/main/resources/sql/h2/quartz.sql" onerror="continue">
-									<classpath refid="maven.test.classpath" />
-								</sql>
 							</target>
 						</configuration>
 					</plugin>
 				</plugins>
 			</build>
 		</profile>
-
-		<!--打包可执行war包, 基于Jetty -->
-		<profile>
-			<id>standalone</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-assembly-plugin</artifactId>
-						<executions>
-							<execution>
-								<phase>package</phase>
-								<goals>
-									<goal>single</goal>
-								</goals>
-								<configuration>
-									<descriptors>
-										<descriptor>assembly-standalone.xml</descriptor>
-									</descriptors>
-									<archive>
-										<manifest>
-											<mainClass>org.springside.examples.showcase.Main</mainClass>
-										</manifest>
-									</archive>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
-		<!--打包可执行war包,基于Tomcat -->
+		<!--war packaging, in Tomcat -->
 		<profile>
 			<id>standalone-tomcat</id>
 			<build>
